# online-store

./: .env  .env.example  .gitignore  README.md  categories_fixture.json  products_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_note_views.py  0003_alter_note_id.py  0004_alter_note_id.py
blog/templates/: base.html  note_create.html  note_delete.html  note_detail.html  note_list.html  note_update.html
blog/templates/includes/: inc_footer.html  inc_menu.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contactinfo.py  0003_alter_category_id_alter_contactinfo_id_and_more.py  0004_product_is_published.py  0005_alter_product_options_alter_category_id_and_more.py  0006_product_owner.py
catalog/templates/: add_product.html  contacts.html  home.html  product_delete.html  product_detail.html  product_update.html
catalog/templates/includes/: inc_footer.html  inc_menu.html
config/: README.md  settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_id.py  0003_alter_user_id.py
users/templates/: login.html  register.html  update.html
