[project]
name = "example-4-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ipython (>=9.14.1,<10.0.0)",
]